# schwrrring2021

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  schwrrring  schwrrring.cbp
Documents/: learnings.md  readme.md
Documents/Learning Material Guitar/: RightHand.md
include/: readme.txt
src/: readme.txt
src/hello_world_module/: HeaderComponent.h  MidiInputList.h  PracticeComponent.h  PracticeTimes.h  hello_world_module.h
src/hello_world_module/Components/: ChordComponent.h  ChordSheetComponent.h
src/hello_world_module/Utilities/: schwrrring_identifiers.h
src/hello_world_module/common/: ChordClipMapper.h  Components.cpp  Components.h  Utilities.h
tests/: CMakeLists.txt  Makefile  test.cpp
